# blogfolio

./: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
app/: __init__.py  crud.py  database.py  main.py  models.py  orm.py  schemas.py
app/my_files/: orm.py
app/my_files/tables/: dht.py
app/tables/: person.py
frontend/portfolio/: package-lock.json
frontend/portfolio/src/: App.js  Navbar.js  styles.css
frontend/portfolio/src/components/: Biometrics.css  Biometrics.js  Button.css  Button.js  UnderConstruction.js
frontend/portfolio/src/pages/: Contact.js  Home.css  Home.js
practice/: 1_create_engine.py  3_defining_table_metadata_with_the_ORM.py
public/: index.html
src/: 1_create_engine.py  2_working_with_database_metadata.py  4_working_with_data.py  5_selecting_rows_with_core_or_orm.py  figures.css  index.js  styles.css
src/components/: AboutCard.css  AboutCard.js  Biometrics.css  Biometrics.js  BlogPostCard.css  BlogPostCard.js  Card.css  InfoCard.css  InfoCard.js  NeumorphicMap.js  UnderConstruction.css
src/images/: audrey_hepburn_colorized.webm
src/pages/: About.js  Blog.js  Contact.css  Contact.js  Home.js  Projects.js  Projects.js.bk
